<resources>

    <!-- Common -->
    <string name="app_name">Recital App</string>
    <string name="theme">Tema</string>

    <!-- Login -->
    <string name="login_title">Recital App</string>
    <string name="email_or_nickname">Email o nickname</string>
    <string name="password_input_textfield">Contraseña</string>
    <string name="sign_in_button">Iniciar sesión</string>
    <string name="remember_credentials_checkbox">Recordar credenciales</string>
    <string name="create_user_textview">¿Aún no tienes cuenta?</string>
    <string name="sign_up_button">Crear cuenta</string>

    <!-- SignUp Activities -->
    <string name="create_user_title">Crear usuario</string>
    <string name="contact_data_title">Datos de contacto</string>
    <string name="new_user_name_input_textfield">Nombre/s</string>
    <string name="new_user_surname_input_textfield">Apellido/s</string>
    <string name="new_user_id_input_textfield">DNI</string>
    <string name="new_user_address_input_textfield">Dirección</string>
    <string name="new_user_phone_number_input_textfield">Teléfono</string>
    <string name="new_user_email_address_input_textfield">Email</string>
    <string name="new_user_nickname_input_textfield">Nickname</string>
    <string name="password_requirements">Requisitos de contraseña\n- 8 caracteres\n- Una letra mayúscula\n- Un caracter especial\n- Un número</string>
    <string name="new_user_password_input_textfield">Contraseña</string>
    <string name="new_user_confirm_password_input_textfield">Confirmar contraseña</string>
    <string name="continue_button">Continuar</string>
    <string name="backward_button">Volver</string>
    <string name="confirm_button">Confirmar datos</string>

    <!-- Account -->
    <string name="user_info_title">Datos de usuario</string>
    <string name="account_info_title">Información de cuenta</string>
    <string name="logged_user_name">Nombre/s:</string>
    <string name="logged_user_surname">Apellido/s:</string>
    <string name="logged_user_id">DNI:</string>
    <string name="logged_user_phone_number">Teléfono:</string>
    <string name="logged_user_address">Dirección:</string>
    <string name="logged_user_creation_date">Fecha de alta en el sistema:</string>
    <string name="logged_user_client_number">Número de cliente:</string>
    <string name="logged_user_email">Email registrado:</string>
    <string name="logged_user_nickname">Nickname en uso:</string>
    <string name="edit_user_attributes">Actualizar datos</string>

    <!-- Activity Main - NavBar Icons -->
    <string name="home_icon_button">Inicio</string>
    <string name="money_icon_button">Saldo</string>
    <string name="history_icon_button">Historial</string>
    <string name="settings_icon_button">Ajustes</string>
    <string name="eventlist_title">Próximos eventos</string>
    <string name="logout_button">Cerrar Sesión</string>

    <!-- EventListItemLayout -->
    <string name="event_item_layout_artist_textview">Artista invitado:</string>
    <string name="event_item_layout_date_textview">Fecha:</string>
    <string name="event_item_layout_time_textview">Hora:</string>
    <string name="event_item_layout_location_textview">Ubicación:</string>
    <string name="event_item_layout_ticket_quantity">Cantidad de tickets:</string>

    <!-- SettingsList Fragment -->
    <string name="settings_list_themes">Temas</string>
    <string name="settings_list_user_settings">Cuenta</string>
    <string name="settings_list_about">Acerca de la aplicación</string>

    <!-- UserFunds Fragment -->
    <string name="current_funds">Saldo actual</string>
    <string name="payment_methods_available">Ver métodos de pago disponibles</string>
    <string name="add_funds">Cargar saldo</string>
    <string name="transaction_history">Historial de recargas</string>

    <!-- TicketHistory RecyclerView Item -->
    <string name="ticket_number">Número de ticket</string>
    <string name="event_artist_name">Artista</string>
    <string name="ticket_event_date">Fecha</string>
    <string name="ticket_event_time">Hora</string>
    <string name="ticket_event_seat_quantity">Asientos</string>
    <string name="ticket_price_per_seat">Valor asiento</string>
    <string name="ticket_subtotal_without_fees">Subtotal</string>
    <string name="ticket_fee">Comisión</string>
    <string name="ticket_payment_method_textview">Medio de pago</string>
    <string name="ticket_total">Monto total</string>

    <!-- TicketHistory Fragment -->
    <string name="ticket_history_title">Historial de tickets</string>
    <string name="total_acumulated_tickets">Total acumulado</string>

    <!-- PaymentMethodsInfo activity -->
    <string name="visa_fee">15:30 a 22:30: 1% sobre el monto de compra.\nResto del día: 3% sobre el monto de compra.</string>
    <string name="mastercard_fee">Sábados y domingos: 3% sobre el monto de compra\nResto de la semana: 0.75% sobre el monto de compra</string>
    <string name="mercado_pago_fee">2% sobre el monto de compra</string>
    <string name="payment_methods_title">Medios de pago habilitados</string>

    <!-- User Transactions History Fragment -->
    <string name="transaction_history_title">Movimientos registrados a la fecha</string>
    <string name="no_transactions_registered">No se registran movimientos a la fecha</string>

    <!-- User Transactions List Recycler View Item Layout -->
    <string name="transaction_id">ID de transacción</string>
    <string name="transaction_amount">Monto</string>
    <string name="transaction_datetime">Fecha y hora</string>

    <!-- Add Funds Activity -->
    <string name="add_funds_title">Añadir fondos</string>
    <string name="add_funds_restrictions">Mínimo: $1000\nMáximo: $1.000.000</string>
    <string name="add_funds_hint">Monto</string>
    <string name="add_funds_confirm">Confirmar</string>

    <!-- EditUser Activity -->
    <string name="edit_user_current_email_hint">Ingresar nuevo email</string>
    <string name="edit_user_current_nickname_hint">Ingresar nuevo nickname</string>
    <string name="edit_user_phone_number_hint">Ingresar nuevo teléfono</string>
    <string name="edit_user_password_settings">Ajustes de contraseña</string>

    <!-- EnterPassword Fragment -->
    <string name="enter_password_fragment_title">Autenticación necesaria para continuar</string>
    <string name="enter_password_fragment_hint">Ingresar contraseña</string>

    <!-- ConfirmPassword Fragment -->
    <string name="confirm_password_fragment_title">Ingresar nueva contraseña</string>
    <string name="confirm_password_fragment_repeate_password">Repetir nueva contraseña</string>

    <!-- BuyTickets Activity -->
    <string name="buy_tickets_title">Comprar tickets</string>
    <string name="buy_tickets_artist_place_holder">Artista de prueba</string>
    <string name="buy_tickets_date_place_holder">31–12–2025</string>
    <string name="buy_tickets_time_place_holder">20:30</string>
    <string name="buy_tickets_location_place_holder">Ubicación de prueba</string>
    <string name="buy_tickets_amount_textview">Cantidad</string>
    <string name="buy_tickets_seat_palco">Palco</string>
    <string name="buy_tickets_seat_platea">Platea</string>
    <string name="buy_tickets_seat_campo">Campo</string>
    <string name="buy_tickets_continue_to_select_payment">Continuar</string>

    <!-- PaymentMethodSelection Activity -->
    <string name="payment_method_selection_title">Seleccionar medio de pago para continuar</string>
    <string name="radio_button_mercado_pago">Mercado Pago</string>
    <string name="radio_button_mastercard">Mastercard</string>
    <string name="radio_button_visa">Visa</string>
    <string name="purchase_confirmation_button">Confirmar compra</string>
    <string name="payment_methods_selection_fee_textview">Comisión aplicada</string>
    <string name="payment_methods_selection_total_textview">Total a abonar</string>
    <string name="payment_methods_selection_seats_textview">Cantidad de asientos</string>

</resources>