<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AddFunds_BackwardsButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurfaceDim"
        app:icon="@drawable/chevron_backward_24dp"
        app:iconTint="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/AddFunds_TitleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_funds_title"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddFunds_BackwardsButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/AddFunds_RestrictionTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/add_funds_restrictions"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddFunds_TitleTextview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddFunds_InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:hintTextColor="?attr/colorOnPrimaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddFunds_RestrictionTextview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddFunds_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_funds_hint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AddFunds_ConfirmButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/add_funds_confirm"
        android:textColor="?attr/colorOnPrimary"
        app:icon="@drawable/approval_24dp"
        app:iconPadding="8dp"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddFunds_InputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>