<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Login_Title_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Login_MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Title_Textview">

        <LinearLayout
            android:id="@+id/Login_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Login_EmailNickname_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="?attr/colorPrimaryContainer"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:hintTextColor="?attr/colorOnPrimaryContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_EmailNickname_EditText"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email_or_nickname"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Login_Password_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="?attr/colorPrimaryContainer"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:hintTextColor="?attr/colorOnPrimaryContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_Password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password_input_textfield"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Login_SignIn_Button"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:fontFamily="@font/roboto"
                android:padding="24dp"
                android:text="@string/sign_in_button"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:icon="@drawable/login_24dp"
                app:iconTint="?attr/colorOnPrimary" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/Login_RememberCredentials_Checkbox"
                style="@style/Widget.Material3.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/remember_credentials_checkbox"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Login_CreateNewUserHint_Textview"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/create_user_textview"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Login_SignUp_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/colorSecondary"
                android:fontFamily="@font/roboto"
                android:padding="24dp"
                android:text="@string/sign_up_button"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp"
                app:icon="@drawable/person_add_24dp"
                app:iconPadding="8dp"
                app:iconTint="?attr/colorOnSecondary" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>