<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConfirmPassword_FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConfirmPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConfirmPassword_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorSurface">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ConfirmPassword_TitleTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/confirm_password_fragment_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ConfirmPassword_PasswordRequirementsTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/password_requirements"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword_TitleTextview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConfirmPassword_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:hint="@string/enter_password_fragment_hint"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:hintTextColor="?attr/colorOnPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword_PasswordRequirementsTextview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmPassword_EnterNewPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimaryContainer" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ConfirmPassword_ReEnterPassword_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:hint="@string/confirm_password_fragment_repeate_password"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:hintTextColor="?attr/colorOnPrimaryContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword_InputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmPassword_ReEnterPassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnPrimaryContainer" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ConfirmPassword_SaveChangesAndExitButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="12dp"
            app:icon="@drawable/check_circle_24dp"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword_ReEnterPassword_InputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>